Closed Bug 1695891 Opened 4 years ago Closed 4 years ago

Changes to the pre-barrier break the barrier verifier

Categories

(Core :: JavaScript: GC, defect, P1)

defect

Tracking

()

RESOLVED FIXED
88 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox86 --- unaffected
firefox87 --- unaffected
firefox88 --- fixed

People

(Reporter: jonco, Assigned: jonco)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

Jan reported his patches that were previously green fail pre-barrier verifier tests since bug 1694209 landed.

This is likely because the verifier doesn't trace the newly added barrier buffer before checking what was marked.

Set release status flags based on info from the regressing bug 1694209

We need to make sure all buffered cells are traced before verifying barriers for this to be equivalent to the original version.

Depends on D106924

Pushed by jcoppeard@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/7b02a20485df Fix pre barrier verifer following changes to how barriers work r=sfink
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 88 Branch
Regressions: 1696880
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: