Bug 1695891 - Fix pre barrier verifer following changes to how barriers work r=sfink

We need to make sure all buffered cells are traced before verifying barriers for this to be equivalent to the original version.

Depends on D106924

Differential Revision: https://phabricator.services.mozilla.com/D106925